--- a/demo.html
+++ b/demo.html
@@ -14,8 +14,9 @@
     </script>
   </head>
   <body>
-    <h1 class='console-writer' cw-animation='true' cw-sound='true'>Console-effect heading</h1>
-    <p class='console-writer' cw-typing-sound='true'>Console-effect paragraph</p>
+    <h1 class='console-writer' cw-animation='true' cw-sound='false'>Console-effect heading</h1>
+    <p class='console-writer' cw-animation='true' cw-initial-delay='1000' cw-sound='true' cw-text='You can replace the text with something else.'>Console-effect paragraph.</p>
+    <p class='console-writer' cw-animation='true' cw-run-on-load='false' cw-sound='true' cw-text='You can prevent automatic running on page load.'></p>
     <button class='button'>Play Again</button>
     <script src='jquery.js'></script>
     <script src='consolewriter.jquery.js'></script>
